--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electric Cars</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 
 <body>
@@ -47,12 +47,13 @@
                 </div>
             </div>
             <model-viewer id="home-model-viewer" alt="Tesla Model S Plaid 2021"
-                src="assets/car_3d_models/tesla_model_s_plaid_2021/scene.gltf" shadow-intensity="1" camera-controls
+                src="./assets/car_3d_models/tesla_model_s_plaid_2021/scene.gltf" shadow-intensity="1" camera-controls
                 touch-action="pan-y"></model-viewer>
         </div>
         <hr>
         <div id="compare" class="segment">
             <form action="javascript:void(0)" id="compareform" onsubmit="compareEVPetrol()">
+                <h1>Cost of Petrol Car v/s Electric Car</h1>
                 <label for="distance">Distance driven by car everyday</label><input type="number" name="distance"
                     id="distance" placeholder="Total distance travelled"><br>
                 <label for="price">Price of petrol per litre</label><input type="number" name="price" id="price"
@@ -73,6 +74,7 @@
         </div>
         <hr>
         <div id="find" class="segment">
+            <h1>Find an electric vehicle that suits your needs</h1>
             <form action="javascript:void(0)" onclick="getAnEV()">
                 <label for="budget">Budget:</label>
                 <select name="budget" id="budget-dropdown">
